[package]
name = "catgirls_rn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.6.1"
# kitty_image = "0.1.0"
reqwest = "0.11.23"
# serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

