[package]
name = "catgirls_rn"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.6.1"
reqwest = "0.11.23"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
