[package]
name = "catgirls_rn"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opener = "0.6.1"
rand = "0.8.5"
serde_json = "1.0.111"
ureq = "2.10.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
strip = true
